# hostsdottxt-api

./: .gitignore  Cargo.toml  Dockerfile  docker-bake.hcl  docker-compose.yaml
migrations/: 2022-04-09-create-schema.sql
pkg/DEBIAN/: control  postinst
pkg/usr/lib/systemd/system/: fdns-api.service  hdt-api.service
src/: extractors.rs  features.rs  main.rs
src/db/: metrics.rs  mod.rs  models.rs  records.rs  strings.rs  users.rs  zones.rs
src/routes/v1/: features.rs  metrics.rs  mod.rs  records.rs  repsonse.rs  requests.rs  users.rs  zones.rs
